--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
   <title>KotoMurzik</title>
   
   <!-- Icon -->
-  <link rel="shortcut icon" type="image/png" href="favicon.png">
+  <link rel="shortcut icon" type="image/png" href="./css/favicon.png">
 
   <!-- Meta Info -->
   <meta charset="UTF-8">
